--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <html>
-  <head></head>
+  <head>
+    <style>
+      #uncles-message {
+        width:100%;
+        height:250px;
+        overflow: scroll;
+        border:1px solid silver;
+        border-radius:15px;
+        padding:10px;
+      }
+    </style>
+  </head>
   <body>
     <div id="root">
+      <label>Зашифрованное сообщение</label>
       <div id="uncles-message">
-            </br>
         <div id="decyphered-message"></div>
       </div>
       <div id="action-panel">
@@ -136,7 +147,29 @@
     </script>
 
     <script>
-      var message = "Two roads diverged in a yellow wood,\n and sorry I could not travel both";
+      var message = "Two roads diverged in a yellow wood,\
+\nAnd sorry I could not travel both\
+\nAnd be one traveler, long I stood\
+\nAnd looked down one as far as I could\
+\nTo where it bent in the undergrowth;\
+\n\
+\nThen took the other, as just as fair,\
+\nAnd having perhaps the better claim,\
+\nBecause it was grassy and wanted wear;\
+\nThough as for that the passing there\
+\nHad worn them really about the same,\
+\n\
+\nAnd both that morning equally lay\
+\nIn leaves no step had trodden black.\
+\nOh, I kept the first for another day!\
+\nYet knowing how way leads on to way,\
+\nI doubted if I should ever come back.\
+\n\
+\nI shall be telling this with a sigh\
+\nSomewhere ages and ages hence:\
+\nTwo roads diverged in a wood, and I—\
+\nI took the one less traveled by,\
+\nAnd that has made all the difference.";
 
       var cyphers = generateCyphers(3);
 
