--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Expires" content="0" />
     <style>
       #root {
+        font-size:26pt;
       }
       #uncles-message {
         height:450px;
