--- a/index.html
+++ b/index.html
@@ -430,19 +430,19 @@
               txt = "Чтобы получить доступ к завещанию, вам нужно расшифровать сообщение, оставленное вашим дядей, и зачитать полученное послание в его кабинете. ";
               break;
             case 2:
-              txt = "Известно, что шифр разбит на 3 части и спрятан в шахте, принадлежащей вашему покойному родственнику. Как только все 3 свитка будут найдены, сообщение будет расшифровано и можно будет перейти в кабинет дяди. ";
+              txt = "Известно, что шифр разбит на 3 части и спрятан в шахте, принадлежащей вашему покойному родственнику. Как только все 3 свитка будут найдены, вы сможете расшифровать сообщение и перейти в кабинет дяди. ";
               break;
             case 3:
-              txt = "В атмосфере рудника обнаружена взрывоопасная концентрация метана, поэтому задействовать можно только одного шахтёра, а передвигаться он может только наощупь и только по заранее заданному алгоритму. ";
+              txt = "Для поиска свитков вы подрядили специально-обученного рудокопа. В атмосфере рудника обнаружена взрывоопасная концентрация метана, поэтому передвигаться он может только наощупь и только по заранее заданному алгоритму. ";
               break;
             case 4:
-              txt = "У шахтера есть шифро-локатор, который указывает оставшееся расстояние (но не направление) до каждого из свитков. Шифролокатор используется каждый раз по окончании движения шахтёра. "
+              txt = "У шахтера есть шифро-локатор, который указывает оставшееся расстояние (но не направление) до каждого из свитков. По окончании движения шахтёр использует локатор. "
               break;
             case 5:
-              txt = "Ваша задача используя шифролокатор дать шахтёру инструкцию для движения в руднике в виде последовательности команд \"вверх\", \"вниз\", \"влево\", \"вправо\". ";
+              txt = "Ваша задача, используя показания шифролокатора, давать шахтёру инструкции для движения в руднике в виде последовательности команд \"вверх\", \"вниз\", \"влево\", \"вправо\". Чтобы сбросить показания шифролокатора, достаточно отправить шахтёра без указания инструкции к движению.";
               break;
             case 7:
-              txt = "В корпусе стола что-то щёлкает и на пол опускается конверт. Вы раскрываете конверт, внутри лежит письмо, в котором написана всего одна строчка. \"Сходи с Димой на свидание\". ";
+              txt = "В корпусе стола что-то щёлкает и на пол опускается конверт. Вы раскрываете конверт, внутри лежит письмо, в котором написана всего одна строчка. \"Сходи с Димой поужинать\". ";
               break;
             case 8:
               txt = "\nКонец. Апплодисменты. "
