--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
               txt = "Для поиска свитков вы подрядили специально-обученного рудокопа. В атмосфере рудника обнаружена взрывоопасная концентрация метана, поэтому передвигаться он может только наощупь и только по заранее заданному алгоритму. ";
               break;
             case 4:
-              txt = "У шахтера есть шифро-локатор, который указывает оставшееся расстояние (но не направление) до каждого из свитков. По окончании движения шахтёр использует локатор. "
+              txt = "У шахтера есть шифро-локатор, который указывает оставшееся расстояние (но не направление) до каждого из свитков. По окончании движения шахтёр использует локатор и возвращается в отправную точку."
               break;
             case 5:
               txt = "Ваша задача, используя показания шифролокатора, давать шахтёру инструкции для движения в руднике в виде последовательности команд \"вверх\", \"вниз\", \"влево\", \"вправо\". Чтобы сбросить показания шифролокатора, достаточно отправить шахтёра без указания инструкции к движению.";
