--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
               txt = "Ваша задача, используя показания шифролокатора, давать шахтёру инструкции для движения в руднике в виде последовательности команд \"вверх\", \"вниз\", \"влево\", \"вправо\". Чтобы сбросить показания шифролокатора, достаточно отправить шахтёра без указания инструкции к движению.";
               break;
             case 7:
-              txt = "В корпусе стола что-то щёлкает и на пол опускается конверт. Вы раскрываете конверт, внутри лежит письмо, в котором написана всего одна строчка. \"Сходи с Димой поужинать\". ";
+              txt = "В корпусе стола что-то щёлкает и на пол опускается конверт. Вы раскрываете конверт, внутри лежит письмо, в котором написана всего одна строчка. \"08.08,2021, Москва, метро Сокол в 15.40, с ребёнком не ебись, мы обо всем договорились.\". ";
               break;
             case 8:
               txt = "\nКонец. Апплодисменты. "
